require user email verification

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -119,6 +119,7 @@
     "Edit and create new schedule": "Edit and create new schedule",
     "Edit and insert instance": "Edit and insert instance",
     "Edit payee": "Edit payee",
+    "Email address verified": "Email address verified",
     "End date": "End date",
     "Enter instance": "Enter instance",
     "Enter schedule instance": "Enter schedule instance",
@@ -370,6 +371,7 @@
     "User settings": "User settings",
     "User settings updated": "User settings updated",
     "Value": "Value",
+    "Verification link sent!": "Verification link sent!",
     "Verify Your Email Address": "Verify Your Email Address",
     "View details": "View details",
     "View investment details": "View investment details",
