--- a/resources/lang/hu.json
+++ b/resources/lang/hu.json
@@ -1,13 +1,17 @@
 {
     " < No default category > ": " < Nincs alapértelmezett kategória >",
     " < No price provider > ": " < Nincs adatszolgáltató >",
+    "Account": "Számla",
+    "Account added": "Számla létrehozva",
     "Account group": "Számla csoport",
+    "Account group added": "Számla csoport létrehozva",
     "Account groups": "Számla csoportok",
     "Accounts": "Számlák",
     "Actions": "Műveletek",
     "Active": "Aktív",
     "Add new transaction": "Új tranzakció",
     "Are you sure to want to delete this item?": "Biztosan törlöd ezt az elemet?",
+    "Assets": "Eszközök",
     "Automatic update": "Automatikus frissítés",
     "Base currency": "Elsődleges pénznem",
     "Base currency cannot be deleted": "Az elsődleges pénznem nem törölhető",
@@ -15,12 +19,15 @@
     "Cancel": "Mégsem",
     "Categories": "Kategóriák",
     "Category": "Kategória",
+    "Category added": "Kategória létrehozva",
     "Comment": "Megjegyzés",
     "Commission": "Jutalék",
     "Commissions": "Jutalékok",
     "Currencies": "Pénznemek",
     "Currency": "Pénznem",
+    "Currency added": "Pénznem létrehozva",
     "Dashboard": "Áttekintés",
+    "Database error:": "Adatbázis hiba:",
     "Date": "Dátum",
     "Delete": "Törlés",
     "Deposit": "Bevétel",
@@ -29,6 +36,14 @@
     "Error": "Hiba",
     "Exchange rate": "Árfolyam",
     "Find transactions": "Tranzakció keresése",
+    "Frequency": "Gyakoriság",
+    "Group": "Csoport",
+    "Hide": "Elrejt",
+    "ISIN number": "ISIN szám",
+    "ISO Code": "ISO kód",
+    "Id": "Id",
+    "Investment": "Befektetés",
+    "Investment added": "Befektetés létrehozva",
     "Investment groups": "Befektetés csoportok",
     "Investments": "Befektetések",
     "Language": "Nyelv",
@@ -46,19 +61,32 @@
     "OK, let's do it!": "Rendben, mehet!",
     "Opening balance": "Nyitó egyenleg",
     "Password": "Jelszó",
+    "Payee": "Üzlet",
+    "Payee added": "Üzlet létrehozva",
+    "Payees": "Üzletek",
     "Price": "Ár",
     "Price provider": "Adatszolgáltató",
+    "Properties": "Tulajdonságok",
+    "Quantity": "Mennyiség",
     "Rate": "Árfolyam",
+    "Reconciled": "Ellenőrzött",
     "Register": "Regisztráció",
     "Register a new account": "Új fiók regisztrációja",
     "Remember Me": "Jegyezz meg!",
     "Remove transaction item": "Tétel törlése",
     "Reports": "Jelentések",
+    "Result": "Eredmény",
+    "Results": "Eredmények",
+    "Return to dashboard": "Kezdőoldalra",
+    "Return to previous page": "Előző oldalra",
+    "Return to selected account": "Kiválasztott számlához",
+    "Return to target account": "Cél számlához",
     "Save": "Mentés",
     "Saved successfully": "Sikeresen elmentve",
     "Search": "Keresés",
     "Search results": "Találatok",
     "Search...": "Keresés...",
+    "Select account": "Válassz számlát",
     "Select account to open": "Ugrás egy számlához",
     "Settings": "Beállítások",
     "Show": "Mutat",
@@ -66,10 +94,12 @@
     "Start date": "Kezdő dátum",
     "TBD": "TBD",
     "Tag": "Címke",
+    "Tag added": "Címke létrehozva",
     "Tags": "Címkék",
     "Tax": "Adó",
     "Taxes": "Adók",
     "Total value": "Teljes érték",
+    "Transfer": "Átvezetés",
     "Transfer from :account": "Utalás innen: :account",
     "Transfer to :account": "Utalás ide: :account",
     "Weekly": "Hetente",
