--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -48,6 +48,7 @@
     "Are you sure you want to discard any changes?": "Are you sure you want to discard any changes?",
     "Are you sure you want to merge these categories?": "Are you sure you want to merge these categories?",
     "Are you sure you want to merge these payees?": "Are you sure you want to merge these payees?",
+    "Are you sure, you want to change the transaction type? Some data might get lost.": "Are you sure, you want to change the transaction type? Some data might get lost.",
     "Assets": "Assets",
     "Assign remaining amount to this item": "Assign remaining amount to this item",
     "Automatic update": "Automatic update",
@@ -143,6 +144,7 @@
     "Has similar transaction": "Has similar transaction",
     "Hide": "Hide",
     "Hide this recommendation, but it might be displayed later": "Hide this recommendation, but it might be displayed later",
+    "I accept the <a href=\":toslink\" target=\"_blank\">terms of service</a>": "I accept the <a href=\":toslink\" target=\"_blank\">terms of service</a>",
     "ISIN number": "ISIN number",
     "ISO Code": "ISO Code",
     "Id": "Id",
@@ -220,6 +222,7 @@
     "New transaction": "New transaction",
     "New transaction item": "New transaction item",
     "Next date": "Next date",
+    "Next month": "Next month",
     "No": "No",
     "No accounts found": "No accounts found",
     "No categories found": "No categories found",
@@ -254,6 +257,7 @@
     "Please select different payees to be merged": "Please select different payees to be merged",
     "Please select payees to be merged": "Please select payees to be merged",
     "Preferred categories for payee": "Preferred categories for payee",
+    "Previous month": "Previous month",
     "Price": "Price",
     "Price history": "Price history",
     "Price provider": "Price provider",
@@ -267,6 +271,7 @@
     "Reconciled": "Reconciled",
     "Register": "Register",
     "Register a new account": "Register a new account",
+    "Remaining amount to": "Remaining amount to",
     "Remember Me": "Remember Me",
     "Remove transaction item": "Remove transaction item",
     "Removed quantity": "Removed quantity",
@@ -340,6 +345,8 @@
     "Tags": "Tags",
     "Tax": "Tax",
     "Taxes": "Taxes",
+    "Terms of service": "Terms of service",
+    "There is no data to show on this chart.": "There is no data to show on this chart.",
     "There were some problems with your input.": "There were some problems with your input.",
     "This action cannot be undone. Proceed with caution.": "This action cannot be undone. Proceed with caution.",
     "Tip on your payee!": "Tip on your payee!",
@@ -347,6 +354,7 @@
     "Toggle navigation": "Toggle navigation",
     "Total": "Total",
     "Total allocated": "Total allocated",
+    "Total amount": "Total amount",
     "Total value": "Total value",
     "Transaction": "Transaction",
     "Transaction added (#:transactionId)": "Transaction added (#:transactionId)",
@@ -385,6 +393,7 @@
     "Withdrawal": "Withdrawal",
     "Without forecast": "Without forecast",
     "YAFFA - Dashboard": "YAFFA - Dashboard",
+    "YAFFA - Terms of service": "YAFFA - Terms of service",
     "Yearly": "Yearly",
     "Yes": "Yes",
     "You cannot change schedule settings for this type of action": "You cannot change schedule settings for this type of action",
