--- a/resources/lang/hu.json
+++ b/resources/lang/hu.json
@@ -3,15 +3,21 @@
     " < No price provider > ": " < Nincs adatszolgáltató >",
     "Account": "Számla",
     "Account added": "Számla létrehozva",
+    "Account from": "Erről a számláról",
     "Account group": "Számla csoport",
     "Account group added": "Számla csoport létrehozva",
     "Account groups": "Számla csoportok",
+    "Account to": "Erre a számlára",
     "Accounts": "Számlák",
     "Actions": "Műveletek",
     "Active": "Aktív",
+    "Add an other transaction": "Új tranzakció",
     "Add new transaction": "Új tranzakció",
+    "Amount": "Összeg",
+    "Amounts": "Összegek",
     "Are you sure to want to delete this item?": "Biztosan törlöd ezt az elemet?",
     "Assets": "Eszközök",
+    "Assign remaining amount to this item": "Fennmaradó összeg hozzárendelése",
     "Automatic update": "Automatikus frissítés",
     "Base currency": "Elsődleges pénznem",
     "Base currency cannot be deleted": "Az elsődleges pénznem nem törölhető",
@@ -20,12 +26,18 @@
     "Categories": "Kategóriák",
     "Category": "Kategória",
     "Category added": "Kategória létrehozva",
+    "Clone": "Másol",
+    "Clone existing transaction": "Tranzakció másolása",
+    "Clone this transaction": "Másold ezt a tranzakciót",
+    "Close": "Bezár",
     "Comment": "Megjegyzés",
     "Commission": "Jutalék",
     "Commissions": "Jutalékok",
     "Currencies": "Pénznemek",
     "Currency": "Pénznem",
     "Currency added": "Pénznem létrehozva",
+    "Customize": "Testreszabás",
+    "Daily": "Naponta",
     "Dashboard": "Áttekintés",
     "Database error:": "Adatbázis hiba:",
     "Date": "Dátum",
@@ -49,6 +61,7 @@
     "Language": "Nyelv",
     "Logout": "Kilépés",
     "Maybe later": "Talán máskor",
+    "Modify existing transaction": "Tranzakció módosítása",
     "Monthly": "Havonta",
     "Monthly change": "Havi változás",
     "Name": "Név",
@@ -102,6 +115,7 @@
     "Transfer": "Átvezetés",
     "Transfer from :account": "Utalás innen: :account",
     "Transfer to :account": "Utalás ide: :account",
+    "Type": "Típus",
     "Weekly": "Hetente",
     "Withdrawal": "Kiadás",
     "Yearly": "Évente",
