feat: redesign the schedules report view and add basic onboarding tour

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -262,7 +262,7 @@
     "Linked transaction": "Linked transaction",
     "List of currencies": "List of currencies",
     "List of investments": "List of investments",
-    "List of schedules and budgets": "List of schedules and budgets",
+    "Schedules and budgets": "Schedules and budgets",
     "List prices": "List prices",
     "Load account transaction history": "Load account transaction history",
     "Load data": "Load data",
