fix: add some missing translations for Hungarian, and related fixes

--- a/resources/lang/hu.json
+++ b/resources/lang/hu.json
@@ -1,20 +1,31 @@
 {
     " < No default category > ": " < Nincs alapértelmezett kategória >",
     " < No price provider > ": " < Nincs adatszolgáltató >",
+    "(No subject)": "(Nincs tárgy)",
+    ":type is in use, cannot be deleted": ":type használatban van, nem törölhető",
     "Account": "Számla",
+    "Account Groups": "Számla Csoportok",
     "Account added": "Számla létrehozva",
+    "Account details for \":account\"": "\":account\" számla részletei",
     "Account from": "Erről a számláról",
     "Account group": "Számla csoport",
     "Account group added": "Számla csoport létrehozva",
     "Account groups": "Számla csoportok",
     "Account to": "Erre a számlára",
     "Accounts": "Számlák",
+    "Action after saving": "Mentés utáni teendő",
     "Actions": "Műveletek",
     "Active": "Aktív",
+    "Actual": "Tény",
     "Add an other transaction": "Új tranzakció",
+    "Add new account": "Új számla",
+    "Add new category": "Új kategória",
+    "Add new investment": "Új befektetés",
+    "Add new payee": "Új üzlet",
     "Add new transaction": "Új tranzakció",
     "Amount": "Összeg",
     "Amounts": "Összegek",
+    "Any": "Bármi",
     "Are you sure to want to delete this item?": "Biztosan törlöd ezt az elemet?",
     "Assets": "Eszközök",
     "Assign remaining amount to this item": "Fennmaradó összeg hozzárendelése",
@@ -22,10 +33,15 @@
     "Base currency": "Elsődleges pénznem",
     "Base currency cannot be deleted": "Az elsődleges pénznem nem törölhető",
     "Base currency changed": "Az elsődleges pénznem módosítva",
+    "Basic": "Egyszerű",
+    "Budget": "Költségvetés",
     "Cancel": "Mégsem",
     "Categories": "Kategóriák",
     "Category": "Kategória",
     "Category added": "Kategória létrehozva",
+    "Change Password": "Jelszó Megváltoztatása",
+    "Child": "Gyerek",
+    "Click here to sign in": "Kattints ide a bejelentkezéshez",
     "Clone": "Másol",
     "Clone existing transaction": "Tranzakció másolása",
     "Clone this transaction": "Másold ezt a tranzakciót",
@@ -33,49 +49,109 @@
     "Comment": "Megjegyzés",
     "Commission": "Jutalék",
     "Commissions": "Jutalékok",
+    "Confirm New Password": "Új Jelszó Megerősítése",
+    "Confirm Password": "Jelszó Megerősítése",
+    "Confirm password": "Jelszó megerősítése",
+    "Controls how numbers, dates, currencies are formatted.": "A YAFFA által használ szám, dátum és pénznem formátum.",
+    "Controls the language used in YAFFA.": "A YAFFA megjelenési nyelve.",
+    "Create an account to start using YAFFA": "A YAFFA használatához hozz létre egy fiókot",
     "Currencies": "Pénznemek",
     "Currency": "Pénznem",
     "Currency added": "Pénznem létrehozva",
+    "Currency rates": "Valuta árfolyamok",
+    "Current Password": "Mostani Jelszó",
     "Customize": "Testreszabás",
+    "Customize YAFFA": "YAFFA testreszabása",
     "Daily": "Naponta",
     "Dashboard": "Áttekintés",
     "Database error:": "Adatbázis hiba:",
     "Date": "Dátum",
+    "Default": "Alapértelmezett",
+    "Default category": "Alapértelmezett kategória",
     "Delete": "Törlés",
     "Deposit": "Bevétel",
+    "Details": "Részletek",
+    "Dismiss": "Eltűntet",
+    "Dividend": "Osztalék",
+    "Do you have an account?": "Van már fiókod?",
     "E-Mail Address": "E-mail cím",
     "Edit": "Szerkesztés",
+    "Email": "Email cím",
+    "End date for YAFFA": "YAFFA befejező dátum",
+    "English": "Angol",
     "Error": "Hiba",
     "Exchange rate": "Árfolyam",
+    "Filters": "Szűrők",
     "Find transactions": "Tranzakció keresése",
+    "First transaction": "Első tranzakció",
+    "Forgot Your Password?": "Elfelejtetted a jelszavad?",
     "Frequency": "Gyakoriság",
     "Group": "Csoport",
+    "Guided tour": "Ismertető lépések",
+    "HTML": "HTML nézet",
     "Hide": "Elrejt",
+    "How long would you like YAFFA to calculate forecasts.": "A dátum ameddig a YAFFA kiszámítsa az előrejelzéseket.",
+    "Hungarian": "Magyar",
+    "I accept the <a href=\":toslink\" target=\"_blank\">terms of service</a>": "Elfogadom a szolgáltatás <a href=\":toslink\" target=\"_blank\">használati feltételeit</a>",
     "ISIN number": "ISIN szám",
     "ISO Code": "ISO kód",
     "Id": "Id",
     "Investment": "Befektetés",
+    "Investment Groups": "Befektetés Csoportok",
     "Investment added": "Befektetés létrehozva",
     "Investment groups": "Befektetés csoportok",
     "Investments": "Befektetések",
     "Language": "Nyelv",
+    "Last transaction": "Utolsó tranzakció",
+    "Learn more": "Tudj meg többet!",
+    "Locale": "Nyelvi beállítás",
+    "Login": "Bejelentkezés",
     "Logout": "Kilépés",
     "Maybe later": "Talán máskor",
     "Modify existing transaction": "Tranzakció módosítása",
     "Monthly": "Havonta",
     "Monthly change": "Havi változás",
+    "Moving average": "Mozgóátlag",
+    "My profile": "Profilom",
     "Name": "Név",
+    "Never show this widget": "Ablak végleges elrejtése",
+    "Never used": "Soha nem használt",
+    "New Password": "Új Jelszó",
+    "New account": "Új számla",
+    "New account group": "Új számla csoport",
+    "New assets": "Új eszközök",
+    "New category": "Új kategória",
+    "New currency": "Új pénznem",
+    "New deposit": "Új bevétel",
+    "New investment": "Új befektetés",
+    "New investment group": "Új befektetés csoport",
+    "New investment transaction": "Új befektetési tranzakció",
+    "New payee": "Új üzlet",
+    "New standard transaction": "Új normál tranzakció",
     "New tag": "Új címke",
     "New transaction": "Új tranzakció",
     "New transaction item": "Új tétel",
+    "New transfer": "Új átvezetés",
+    "New withdrawal": "Új kiadás",
     "No": "Nem",
+    "No items added": "Nincsenek tételek hozzáadva",
     "No, thanks": "Köszönöm, nem",
+    "None": "Semmi",
+    "Not allocated": "Nem felosztott",
     "Not set": "Nincs megadva",
     "OK, let's do it!": "Rendben, mehet!",
     "Opening balance": "Nyitó egyenleg",
+    "Overview": "Áttekintés",
+    "Parent": "Szülő",
+    "Parent category": "Szülő kategória",
+    "Parent or children": "Szülő vagy gyerek",
     "Password": "Jelszó",
+    "Password changed successfully.": "A jelszó sikeresen megváltozott.",
     "Payee": "Üzlet",
     "Payee added": "Üzlet létrehozva",
+    "Payee deleted": "Üzlet törölve",
+    "Payee details": "Üzlet részletei",
+    "Payee updated": "Üzlet módosítva",
     "Payees": "Üzletek",
     "Price": "Ár",
     "Price provider": "Adatszolgáltató",
@@ -88,6 +164,7 @@
     "Remember Me": "Jegyezz meg!",
     "Remove transaction item": "Tétel törlése",
     "Reports": "Jelentések",
+    "Reset Password": "Jelszó visszaállítása",
     "Result": "Eredmény",
     "Results": "Eredmények",
     "Return to dashboard": "Kezdőoldalra",
@@ -96,28 +173,70 @@
     "Return to target account": "Cél számlához",
     "Save": "Mentés",
     "Saved successfully": "Sikeresen elmentve",
+    "Schedule": "Ütemezés",
+    "Scheduled": "Ütemezett",
     "Search": "Keresés",
     "Search results": "Találatok",
     "Search...": "Keresés...",
     "Select account": "Válassz számlát",
     "Select account to open": "Ugrás egy számlához",
+    "Select category": "Válassz kategóriát",
+    "Select investment": "Válassz befektetést",
+    "Select payee": "Válassz üzletet",
+    "Select tag(s)": "Válaszz címké(ke)t",
+    "Send Password Reset Link": "Jelszó Visszaállítási Link Küldése",
     "Settings": "Beállítások",
     "Show": "Mutat",
+    "Show this transaction": "Mutasd ezt a tranzakciót",
     "Sign In": "Belépés",
+    "Sign in to start your session": "Lépj be a kezdéshez",
     "Start date": "Kezdő dátum",
+    "Start date for YAFFA": "YAFFA kezdő dátum",
+    "Starting assets": "Kezdő eszközök",
     "TBD": "TBD",
     "Tag": "Címke",
     "Tag added": "Címke létrehozva",
     "Tags": "Címkék",
     "Tax": "Adó",
     "Taxes": "Adók",
+    "Temporarily hide this widget": "Ablak átmeneti bezárása",
+    "Text": "Szöveges nézet",
+    "The currency that is generally used in reports, charts and summaries. You can add several other currencies to fit your needs, and change this setting later.": "A jelentésekben, diagramokban és összefoglalókban általában használt pénznem. Számos más pénznemet is hozzáadhatsz, és később módosíthatod ezt a beállítást.",
+    "The earliest date YAFFA uses to retrieve currency exchange rates and investment prices. You can record transactions to earlier dates, if needed.": "A legkorábbi dátum amikortól a YAFFA lekérdezi a valutaárfolyamokat és a befektetés árakat. Szükség esetén felvehetsz ennél korábbi dátummal is tranzakciókat.",
+    "These settings cannot be changed after saving the transaction.": "A tranzakció mentése után ezek a beállítások nem módosíthatók.",
+    "This account cannot be deleted.": "Ezt a számlát nem lehet törölni",
+    "This account group cannot be deleted.": "Ezt a számla csoportot nem lehet törölni.",
+    "This action cannot be undone. Proceed with caution.": "Ezt a műveletet nem lehet visszavonni. Légy körültekintő!",
+    "This category cannot be deleted.": "Ez a kategória nem törölhető.",
+    "This investment cannot be deleted.": "Ez a befektetés nem törölhető.",
+    "This investment group cannot be deleted.": "Ez a befektetés csoport nem törölhető.",
+    "This month": "Ez a hónap",
+    "This month to date": "Ez a hónap a mai napig",
+    "This quarter": "Ez a negyedév",
+    "This quarter to date": "Ez a negyedév a mai napig",
+    "This year": "Ez az év",
+    "This year to date": "Ez az év mostanáig",
+    "Tip on your payee!": "Javaslat az üzlethez!",
+    "Total allocated": "Felosztott összeg",
+    "Total amount": "Teljes összeg",
     "Total value": "Teljes érték",
+    "Transaction": "Tranzakció",
+    "Transaction items": "Tranzakció tételek",
+    "Transaction type": "Tranzakció típusa",
+    "Transactions": "Tranzakciók",
     "Transfer": "Átvezetés",
     "Transfer from :account": "Utalás innen: :account",
     "Transfer to :account": "Utalás ide: :account",
     "Type": "Típus",
+    "Update user settings": "Felhasználói beállítások módosítása",
+    "View the guided tour for this page": "Az oldalhoz tartozó útmutató megtekintése",
     "Weekly": "Hetente",
+    "Withdraw": "Kiadás",
     "Withdrawal": "Kiadás",
+    "YAFFA can create some accounts, currencies and categories for a convenient start. You can customize these anytime.": "A YAFFA létre tud hozni néhány számlát, pénznemet, kategóriát a kényelmes kezdéshez. Bármikor testre szabhatod.",
+    "YAFFA is an easy to use personal finance tracker.": "Egy könnyen használható személyes pénzügyi alkalmazás",
     "Yearly": "Évente",
-    "Yes": "Igen"
+    "Yes": "Igen",
+    "You can dismiss this widget to hide it forever.": "Örökre eltűntetheted ezt az ablakot.",
+    "Home": "Kezdő oldal"
 }
