fix: incorrect sorting in schedule table

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -244,6 +244,7 @@
     "Import transactions": "Import transactions",
     "Inactive": "Inactive",
     "Interval": "Interval",
+    "investment": "investment",
     "Investment": "Investment",
     "Investment Groups": "Investment Groups",
     "Investment added": "Investment added",
@@ -460,6 +461,11 @@
     "Select preset": "Select preset",
     "Select tag(s)": "Select tag(s)",
     "Selected": "Selected",
+    "Buy": "Buy",
+    "Sell": "Sell",
+    "Add shares": "Add shares",
+    "Remove shares": "Remove shares",
+    "Interest yield": "Interest yield",
     "Selling revenue": "Selling revenue",
     "Send Password Reset Link": "Send Password Reset Link",
     "Set as default": "Set as default",
@@ -484,6 +490,7 @@
     "Skipping schedule instance for transaction #:transactionId": "Skipping schedule instance for transaction #:transactionId",
     "Something failed": "Something failed",
     "Split transaction": "Split transaction",
+    "standard": "standard",
     "Standard": "Standard",
     "Start date": "Start date",
     "Start date for YAFFA": "Start date for YAFFA",
@@ -606,7 +613,6 @@
     "commission": "commission",
     "dividend": "dividend",
     "inactive": "inactive",
-    "investment": "investment",
     "investment.requirement.currency": "investment.requirement.currency",
     "investment.requirement.investmentGroup": "investment.requirement.investmentGroup",
     "price": "price",
