--- a/resources/lang/hu.json
+++ b/resources/lang/hu.json
@@ -97,6 +97,7 @@
     "ISIN number": "ISIN szám",
     "ISO Code": "ISO kód",
     "Id": "Id",
+    "investment": "befektetés",
     "Investment": "Befektetés",
     "Investment Groups": "Befektetés Csoportok",
     "Investment added": "Befektetés létrehozva",
@@ -186,12 +187,19 @@
     "Select investment": "Válassz befektetést",
     "Select payee": "Válassz üzletet",
     "Select tag(s)": "Válaszz címké(ke)t",
+    "Buy": "Vétel",
+    "Sell": "Eladás",
+    "Add shares": "Részvény hozzáadás",
+    "Remove shares": "Részvény eltávolítás",
+    "Interest yield": "Hozam",
     "Send Password Reset Link": "Jelszó Visszaállítási Link Küldése",
     "Settings": "Beállítások",
     "Show": "Mutat",
     "Show this transaction": "Mutasd ezt a tranzakciót",
     "Sign In": "Belépés",
     "Sign in to start your session": "Lépj be a kezdéshez",
+    "standard": "általános",
+    "Standard": "Általános",
     "Start date": "Kezdő dátum",
     "Start date for YAFFA": "YAFFA kezdő dátum",
     "Starting assets": "Kezdő eszközök",
