feat: sandbox login helper

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -429,6 +429,9 @@
     "Review currency settings": "Review currency settings",
     "Right click on a transaction to open a context menu with actions.": "Right click on a transaction to open a context menu with actions.",
     "Running total": "Running total",
+    "sandbox.login.info": "You can create a new account for testing by registering. Feel free to use a disposable email address or fake credential. You can also explore existing demo data using the credentials below.",
+    "sandbox.login.credentials": "<strong>Email:</strong> demo@yaffa.cc <strong>Password:</strong> demo",
+    "sandbox.login.fill": "Login with demo credentials",
     "Save": "Save",
     "Saved successfully": "Saved successfully",
     "Schedule": "Schedule",
