--- a/resources/lang/hu.json
+++ b/resources/lang/hu.json
@@ -174,6 +174,9 @@
     "Return to previous page": "Előző oldalra",
     "Return to selected account": "Kiválasztott számlához",
     "Return to target account": "Cél számlához",
+    "sandbox.login.info": "Regisztrálj és készíts egy saját fiókot a teszteléshez. Használj eldobható email címet és bármilyen kitalált adatot. Ismerd meg a demo adatokat az alábbi belépési adatokkal.",
+    "sandbox.login.credentials": "<strong>Email-cím:</strong> demo@yaffa.cc <strong>Jelszó:</strong> demo",
+    "sandbox.login.fill": "Belépés a demo fiókba",
     "Save": "Mentés",
     "Saved successfully": "Sikeresen elmentve",
     "Schedule": "Ütemezés",
