fix: minor changes based on Gemini code review

--- a/lang/en.json
+++ b/lang/en.json
@@ -118,8 +118,7 @@
     "Comment": "Comment",
     "Commission": "Commission",
     "Commissions": "Commissions",
-    "Confirm New Password": "Confirm New Password",
-    "Confirm Password": "Confirm Password",
+    "Confirm new password": "Confirm new password",
     "Confirm password": "Confirm password",
     "Congratulations! Keep using YAFFA. You can dismiss this widget.": "Congratulations! Keep using YAFFA. You can dismiss this widget.",
     "Controls how numbers, dates, currencies are formatted.": "Controls how numbers, dates, currencies are formatted.",
