--- a/lang/hu.json
+++ b/lang/hu.json
@@ -49,8 +49,7 @@
     "Comment": "Megjegyzés",
     "Commission": "Jutalék",
     "Commissions": "Jutalékok",
-    "Confirm New Password": "Új Jelszó Megerősítése",
-    "Confirm Password": "Jelszó Megerősítése",
+    "Confirm new password": "Új jelszó megerősítése",
     "Confirm password": "Jelszó megerősítése",
     "Controls how numbers, dates, currencies are formatted.": "A YAFFA által használ szám, dátum és pénznem formátum.",
     "Controls the language used in YAFFA.": "A YAFFA megjelenési nyelve.",
