--- a/lang/hu.json
+++ b/lang/hu.json
@@ -17,14 +17,19 @@
     "Actions": "Műveletek",
     "Active": "Aktív",
     "Actual": "Tény",
+    "Add": "Hozzáadás",
+    "Add Currency Rate": "Árfolyam hozzáadása",
     "Add an other transaction": "Új tranzakció",
     "Add new account": "Új számla",
     "Add new category": "Új kategória",
     "Add new investment": "Új befektetés",
     "Add new payee": "Új üzlet",
+    "Add new rate": "Új árfolyam hozzáadása",
     "Add new transaction": "Új tranzakció",
+    "Add shares": "Részvény hozzáadás",
     "Amount": "Összeg",
     "Amounts": "Összegek",
+    "An error occurred": "Hiba történt",
     "Any": "Bármi",
     "Are you sure to want to delete this item?": "Biztosan törlöd ezt az elemet?",
     "Assets": "Eszközök",
@@ -35,6 +40,7 @@
     "Base currency changed": "Az elsődleges pénznem módosítva",
     "Basic": "Egyszerű",
     "Budget": "Költségvetés",
+    "Buy": "Vétel",
     "Cancel": "Mégsem",
     "Categories": "Kategóriák",
     "Category": "Kategória",
@@ -57,27 +63,12 @@
     "Currencies": "Pénznemek",
     "Currency": "Pénznem",
     "Currency added": "Pénznem létrehozva",
-    "Currency rates": "Valuta árfolyamok",
+    "Currency deleted": "Pénznem törölve",
     "Currency rate added": "Árfolyam hozzáadva",
     "Currency rate deleted": "Árfolyam törölve",
     "Currency rate updated": "Árfolyam frissítve",
     "Currency rate values": "Árfolyam értékek",
-    "Add Currency Rate": "Árfolyam hozzáadása",
-    "Edit Currency Rate": "Árfolyam szerkesztése",
-    "Add new rate": "Új árfolyam hozzáadása",
-    "Load missing rates": "Hiányzó árfolyamok betöltése",
-    "Loading missing rates...": "Hiányzó árfolyamok betöltése...",
-    "Missing rates loaded successfully": "Hiányzó árfolyamok sikeresen betöltve",
-    "Failed to load missing rates": "Hiányzó árfolyamok betöltése sikertelen",
-    "Deleting rate...": "Árfolyam törlése...",
-    "Failed to delete rate": "Árfolyam törlése sikertelen",
-    "First available data": "Első elérhető adat",
-    "Last available data": "Utolsó elérhető adat",
-    "Last known rate": "Utolsó ismert árfolyam",
-    "Number of records": "Rekordok száma",
-    "No data available": "Nincs elérhető adat",
-    "No data": "Nincs adat",
-    "An error occurred": "Hiba történt",
+    "Currency rates": "Valuta árfolyamok",
     "Current Password": "Mostani Jelszó",
     "Customize": "Testreszabás",
     "Customize YAFFA": "YAFFA testreszabása",
@@ -88,6 +79,7 @@
     "Default": "Alapértelmezett",
     "Default category": "Alapértelmezett kategória",
     "Delete": "Törlés",
+    "Deleting rate...": "Árfolyam törlése...",
     "Deposit": "Bevétel",
     "Details": "Részletek",
     "Dismiss": "Eltűntet",
@@ -95,13 +87,17 @@
     "Do you have an account?": "Van már fiókod?",
     "E-Mail Address": "E-mail cím",
     "Edit": "Szerkesztés",
+    "Edit Currency Rate": "Árfolyam szerkesztése",
     "Email": "Email cím",
     "End date for YAFFA": "YAFFA befejező dátum",
     "English": "Angol",
     "Error": "Hiba",
     "Exchange rate": "Árfolyam",
+    "Failed to delete rate": "Árfolyam törlése sikertelen",
+    "Failed to load missing rates": "Hiányzó árfolyamok betöltése sikertelen",
     "Filters": "Szűrők",
     "Find transactions": "Tranzakció keresése",
+    "First available data": "Első elérhető adat",
     "First transaction": "Első tranzakció",
     "Forgot Your Password?": "Elfelejtetted a jelszavad?",
     "Frequency": "Gyakoriság",
@@ -116,19 +112,24 @@
     "ISIN number": "ISIN szám",
     "ISO Code": "ISO kód",
     "Id": "Id",
-    "investment": "befektetés",
+    "Interest yield": "Hozam",
     "Investment": "Befektetés",
     "Investment Groups": "Befektetés Csoportok",
     "Investment added": "Befektetés létrehozva",
     "Investment groups": "Befektetés csoportok",
     "Investments": "Befektetések",
     "Language": "Nyelv",
+    "Last available data": "Utolsó elérhető adat",
+    "Last known rate": "Utolsó ismert árfolyam",
     "Last transaction": "Utolsó tranzakció",
     "Learn more": "Tudj meg többet!",
+    "Load missing rates": "Hiányzó árfolyamok betöltése",
+    "Loading missing rates...": "Hiányzó árfolyamok betöltése...",
     "Locale": "Nyelvi beállítás",
     "Login": "Bejelentkezés",
     "Logout": "Kilépés",
     "Maybe later": "Talán máskor",
+    "Missing rates loaded successfully": "Hiányzó árfolyamok sikeresen betöltve",
     "Modify existing transaction": "Tranzakció módosítása",
     "Monthly": "Havonta",
     "Monthly change": "Havi változás",
@@ -155,11 +156,14 @@
     "New transfer": "Új átvezetés",
     "New withdrawal": "Új kiadás",
     "No": "Nem",
+    "No data": "Nincs adat",
+    "No data available": "Nincs elérhető adat",
     "No items added": "Nincsenek tételek hozzáadva",
     "No, thanks": "Köszönöm, nem",
     "None": "Semmi",
     "Not allocated": "Nem felosztott",
     "Not set": "Nincs megadva",
+    "Number of records": "Rekordok száma",
     "OK, let's do it!": "Rendben, mehet!",
     "Opening balance": "Nyitó egyenleg",
     "Overview": "Áttekintés",
@@ -184,6 +188,7 @@
     "Register": "Regisztráció",
     "Register a new account": "Új fiók regisztrációja",
     "Remember Me": "Jegyezz meg!",
+    "Remove shares": "Részvény eltávolítás",
     "Remove transaction item": "Tétel törlése",
     "Reports": "Jelentések",
     "Reset Password": "Jelszó visszaállítása",
@@ -193,11 +198,6 @@
     "Return to previous page": "Előző oldalra",
     "Return to selected account": "Kiválasztott számlához",
     "Return to target account": "Cél számlához",
-    "sandbox.login.info": "Regisztrálj és készíts egy saját fiókot a teszteléshez. Használj eldobható email címet és bármilyen kitalált adatot. Ismerd meg a demo adatokat az alábbi belépési adatokkal.",
-    "sandbox.login.credentials": "<strong>Email-cím:</strong> demo@yaffa.cc <strong>Jelszó:</strong> demo",
-    "sandbox.login.fill": "Belépés a demo fiókba",
-    "sandbox.reset.info": "A törlésig nézz körül és próbálj ki bármilyen funkciót.",
-    "sandbox.reset.timer": "A teszt környezetben az adatok rendszeresen visszaállításra kerülnek. Idő a következő törlésig: :days nap, :hours óra.",
     "Save": "Mentés",
     "Saved successfully": "Sikeresen elmentve",
     "Schedule": "Ütemezés",
@@ -211,23 +211,17 @@
     "Select investment": "Válassz befektetést",
     "Select payee": "Válassz üzletet",
     "Select tag(s)": "Válaszz címké(ke)t",
-    "Buy": "Vétel",
     "Sell": "Eladás",
-    "Add shares": "Részvény hozzáadás",
-    "Remove shares": "Részvény eltávolítás",
-    "Interest yield": "Hozam",
     "Send Password Reset Link": "Jelszó Visszaállítási Link Küldése",
     "Settings": "Beállítások",
     "Show": "Mutat",
     "Show this transaction": "Mutasd ezt a tranzakciót",
     "Sign In": "Belépés",
     "Sign in to start your session": "Lépj be a kezdéshez",
-    "standard": "általános",
     "Standard": "Általános",
     "Start date": "Kezdő dátum",
     "Start date for YAFFA": "YAFFA kezdő dátum",
     "Starting assets": "Kezdő eszközök",
-    "TBD": "TBD",
     "Tag": "Címke",
     "Tag added": "Címke létrehozva",
     "Tags": "Címkék",
@@ -271,5 +265,11 @@
     "YAFFA is an easy to use personal finance tracker.": "Egy könnyen használható személyes pénzügyi alkalmazás",
     "Yearly": "Évente",
     "Yes": "Igen",
-    "You can dismiss this widget to hide it forever.": "Örökre eltűntetheted ezt az ablakot."
+    "You can dismiss this widget to hide it forever.": "Örökre eltűntetheted ezt az ablakot.",
+    "investment": "befektetés",
+    "sandbox.login.credentials": "<strong>Email-cím:</strong> demo@yaffa.cc <strong>Jelszó:</strong> demo",
+    "sandbox.login.fill": "Belépés a demo fiókba",
+    "sandbox.login.info": "Regisztrálj és készíts egy saját fiókot a teszteléshez. Használj eldobható email címet és bármilyen kitalált adatot. Ismerd meg a demo adatokat az alábbi belépési adatokkal.",
+    "sandbox.reset.info": "A törlésig nézz körül és próbálj ki bármilyen funkciót.",
+    "standard": "általános"
 }
