wip: some cleanup in the translation files

--- a/lang/hu.json
+++ b/lang/hu.json
@@ -103,7 +103,8 @@
     "Frequency": "Gyakoriság",
     "Group": "Csoport",
     "Guided tour": "Ismertető lépések",
-    "HTML": "HTML nézet",
+    "HTML": "HTML",
+    "HTML view": "HTML nézet",
     "Hide": "Elrejt",
     "Home": "Kezdő oldal",
     "How long would you like YAFFA to calculate forecasts.": "A dátum ameddig a YAFFA kiszámítsa az előrejelzéseket.",
@@ -228,8 +229,10 @@
     "Tax": "Adó",
     "Taxes": "Adók",
     "Temporarily hide this widget": "Ablak átmeneti bezárása",
-    "Text": "Szöveges nézet",
+    "Text": "Szöveg",
+    "Text view": "Szöveges nézet",
     "The currency that is generally used in reports, charts and summaries. You can add several other currencies to fit your needs, and change this setting later.": "A jelentésekben, diagramokban és összefoglalókban általában használt pénznem. Számos más pénznemet is hozzáadhatsz, és később módosíthatod ezt a beállítást.",
+    "The data in this sandbox environment is regularly cleared. Time until next reset: :days :daysLabel and :hours :hoursLabel": "A teszt környezetben az adatok rendszeresen visszaállításra kerülnek. Idő a következő törlésig: :days nap, :hours óra.",
     "The earliest date YAFFA uses to retrieve currency exchange rates and investment prices. You can record transactions to earlier dates, if needed.": "A legkorábbi dátum amikortól a YAFFA lekérdezi a valutaárfolyamokat és a befektetés árakat. Szükség esetén felvehetsz ennél korábbi dátummal is tranzakciókat.",
     "These settings cannot be changed after saving the transaction.": "A tranzakció mentése után ezek a beállítások nem módosíthatók.",
     "This account cannot be deleted.": "Ezt a számlát nem lehet törölni",
@@ -263,6 +266,7 @@
     "Withdrawal": "Kiadás",
     "YAFFA can create some accounts, currencies and categories for a convenient start. You can customize these anytime.": "A YAFFA létre tud hozni néhány számlát, pénznemet, kategóriát a kényelmes kezdéshez. Bármikor testre szabhatod.",
     "YAFFA is an easy to use personal finance tracker.": "Egy könnyen használható személyes pénzügyi alkalmazás",
+    "Year": "Év",
     "Yearly": "Évente",
     "Yes": "Igen",
     "You can dismiss this widget to hide it forever.": "Örökre eltűntetheted ezt az ablakot.",
