feat: add missing translation strings (AI translated)

--- a/lang/en.json
+++ b/lang/en.json
@@ -623,8 +623,8 @@
     "dividend": "dividend",
     "inactive": "inactive",
     "investment": "investment",
-    "investment.requirement.currency": "investment.requirement.currency",
-    "investment.requirement.investmentGroup": "investment.requirement.investmentGroup",
+    "investment.requirement.currency": "Before creating an investment, please add at least one currency. Investments must have a currency assigned.",
+    "investment.requirement.investmentGroup": "Before creating an investment, please add at least one investment group. E.g. stocks, bonds, etc. Investment groups help to organize your investments.",
     "price": "price",
     "quantity": "quantity",
     "sandbox.login.credentials": "<strong>Email:</strong> demo@yaffa.cc <strong>Password:</strong> demo",
