--- a/lang/hu.json
+++ b/lang/hu.json
@@ -516,7 +516,6 @@
     "Text": "Szöveges nézet",
     "The :attribute must be unchecked.": "A(z) :attribute-nak nem szabad bejelölnie.",
     "The currency that is generally used in reports, charts and summaries. You can add several other currencies to fit your needs, and change this setting later.": "A jelentésekben, diagramokban és összefoglalókban általában használt pénznem. Számos más pénznemet is hozzáadhatsz, és később módosíthatod ezt a beállítást.",
-    "The data in this sandbox environment is regularly cleared. Time until next reset: :days :daysLabel and :hours :hoursLabel": "A teszt környezetben az adatok rendszeresen visszaállításra kerülnek. Idő a következő törlésig: :days nap, :hours óra.",
     "The earliest date YAFFA uses to retrieve currency exchange rates and investment prices. You can record transactions to earlier dates, if needed.": "A legkorábbi dátum amikortól a YAFFA lekérdezi a valutaárfolyamokat és a befektetés árakat. Szükség esetén felvehetsz ennél korábbi dátummal is tranzakciókat.",
     "The language has been updated. Please refresh the page to see the changes.": "A nyelv frissült. Kérjük, frissítse az oldalt a változások megtekintéséhez.",
     "The monthly summary for this account entity is being updated.": "A számla havi összesítője frissül.",
@@ -598,7 +597,6 @@
     "Without forecast": "Előrejelzés nélkül",
     "YAFFA can create some accounts, currencies and categories for a convenient start. You can customize these anytime.": "A YAFFA létre tud hozni néhány számlát, pénznemet, kategóriát a kényelmes kezdéshez. Bármikor testre szabhatod.",
     "YAFFA is an easy to use personal finance tracker.": "Egy könnyen használható személyes pénzügyi alkalmazás",
-    "Year": "Év",
     "Yearly": "Évente",
     "Yes": "Igen",
     "You can create new account groups to organize your accounts.": "Új számla csoportokat hozhatsz létre a számláid rendszerezéséhez.",
@@ -620,13 +618,13 @@
     "callback.returnToPrimaryAccount": "Kiválasztott számlához",
     "callback.returnToSecondaryAccount": "Cél számlához",
     "callback.showTransaction": "Mutasd ezt a tranzakciót",
-    "click here to request another": "kattintson ide egy másik kéréséhez",
+    "click here to request another": "kattints ide egy másik kéréséhez",
     "commission": "jutalék",
     "dividend": "osztalék",
     "inactive": "inaktív",
     "investment": "befektetés",
-    "investment.requirement.currency": "befektetés.követelmény.pénznem",
-    "investment.requirement.investmentGroup": "befektetés.követelmény.befektetési csoport",
+    "investment.requirement.currency": "Befektetés létrehozása előtt kérjük, adjon hozzá legalább egy pénznemet. A befektetésekhez hozzá kell rendelni egy pénznemet.",
+    "investment.requirement.investmentGroup": "Befektetés létrehozása előtt kérjük, adjon hozzá legalább egy befektetési csoportot. Pl. részvények, kötvények stb. A befektetési csoportok segítenek a befektetések rendszerezésében.",
     "price": "ár",
     "quantity": "mennyiség",
     "sandbox.login.credentials": "<strong>Email-cím:</strong> demo@yaffa.cc <strong>Jelszó:</strong> demo",
